2004-09-08  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: wzdftpd broken on debian arm, ppc and s390 (Thanks to zentor)
	* bugfix: missing va_end when using va_start
	* bugfix: site grpadd and grpdel not working

2004-08-31  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: segfault when deleting symlink with non-existent target
	* bugfix: uptime display broken
	* feature: added patch from Tobias Bengtsson to allow group members of
	gid=0 to get siteop access using PAM backend.
	* cookies: %usertime (time online for this session)

2004-08-28  Roman Bogorodskiy <bogorodskiy@inbox.ru>
	
	* bugfix: fix build on FreeBSD 4.x

2004-08-25  Pierre Chifflier  <pollux@cpe.fr>

	* --- cvs commit TAG: rel-0-4-0

	* bugfix: changed EPSV reply code to 229 (to be RFC-compliant)
	* bugfix: avoid segfault on freebsd when kernel has no shm support

2004-08-14  Pierre Chifflier  <pollux@cpe.fr>

	* feature: some code audit using splint. Fixed some warnings
	* feature: tcl/perl: vfs remove -r
	* feature: config option data_buffer_length
	* feature: flag K (enforce TLS data connections)
	* feature: site change user flags now accepts arguments like +H or -I
	* feature: site flags can now change flags
	* feature: site change credits
	* feature: new vars credits (user)
	* bugfix: many commands not working inside symlinks (RETR, STOR, etc)
	* bugfix: site chmod 0 not working
	* bugfix: disabled command SAVECFG (Not Yet Implemented)
	* bugfix: perl: 'vars_user set' reporting errors on success

2004-08-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: transfer data buffer is now dynamic, size can be tweaked in config
	* feature: changed semaphore to mutex in bandwidth limiter
	* bugfix: segfault when exiting (when freeing shm vars)
	* bugfix: wzd_mutex_create always returning NULL

2004-08-06  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: permissions not displayed correctly on windows (again)

2004-08-04  Pierre Chifflier  <pollux@wzdftpd.net>
